fix(check): text-align

--- a/app/blocks/check/check.styl
+++ b/app/blocks/check/check.styl
@@ -51,4 +51,5 @@
 		padding-left 10px
 		font-size 16px
 		line-height 1.2
+		text-align left
 		color #fff
